[package]
name = "schnorrkel-js"
version = "0.1.3"
authors = ["kianenigma <Kian.peymani@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
wasm-bindgen-test = { version = "0.2" }
sha2 = { version = "0.8"}
schnorrkel = { version = "0.0", features = ["nightly"]}

[dev-dependencies]
rand = { version = "0.6.5", features = ["wasm-bindgen"] }